Refactoring and add application model
