# web/app/Api/V1/Controllers/MainController.php
@@ -3,12 +3,13 @@
 namespace App\Api\V1\Controllers;
 
 use App\Http\Controllers\Controller;
-use App\Models\Device;
-use App\Models\Stats;
+use App\Models\Application;
+use App\Models\Link;
 use App\Models\User;
 use Illuminate\Contracts\Encryption\DecryptException;
 use Illuminate\Http\Request;
 use App\Services\Crypt;
+use Kreait\Firebase\DynamicLink\CreateDynamicLink\FailedToCreateDynamicLink;
 use PubSub;
 use Validator;
 
@@ -25,7 +26,7 @@ class MainController extends Controller
      *     path="/api/v1/referral",
      *     summary="List all referrals for user",
      *     description="List all referrals for user",
-     *     tags={"Referral"},
+     *     tags={"Main"},
      *
      *     @OA\Parameter(
      *         name="user-id",
@@ -71,7 +72,7 @@ class MainController extends Controller
         }
 
         // Check & update username
-        $currentUser = User::where('app_user_id', $userId)->get();
+        $currentUser = User::where('user_id', $userId)->get();
         $username = $request->header('username', null);
 
         if($currentUser !== $username){
@@ -87,11 +88,13 @@ class MainController extends Controller
     }
 
     /**
+     * Save data
+     *
      * @OA\Post(
      *     path="/api/v1/referral",
      *     summary="Join new user to referrer",
      *     description="Send encryption data: username - New User Name, * package_name (required) - Package Name, referrer_code - Referrer code, * device_id (required) - User Device ID, * device_name (required) - User Device Name",
-     *     tags={"Referral"},
+     *     tags={"Main"},
      *
      *     @OA\Parameter(
      *         name="user-id",
@@ -188,7 +191,7 @@ class MainController extends Controller
                 abort(401, 'Unauthorized');
             }
 
-            $inputData['app_user_id'] = $appUserId;
+            $inputData['user_id'] = $appUserId;
             $inputData['user_name'] = $request->header('username', null);
 
             return $this->join($inputData);
@@ -201,15 +204,182 @@ class MainController extends Controller
     }
 
     /**
+     * Get user referrer invite code
+     *
+     * @OA\Get(
+     *     path="/api/v1/referral/invite",
+     *     summary="Get user invite code",
+     *     description="Get user referrer invite code",
+     *     tags={"Main"},
+     *
+     *     @OA\Parameter(
+     *         name="user-id",
+     *         description="User ID",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="package_name",
+     *         description="Package Name",
+     *         in="query",
+     *         example="net.sumra.chat",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Success get or generate referrer invite code"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid request"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="not found"
+     *     )
+     * )
+     */
+
+    /**
+     * Get user referrer invite code
+     *
+     * @param Request $request
+     *
+     * @return \Sumra\JsonApi\
+     * @throws \Illuminate\Validation\ValidationException
+     */
+    public function invite(Request $request)
+    {
+        $userId = $request->header('user-id');
+
+        if ($userId === null) {
+            abort(401, 'Unauthorized');
+        }
+
+        // Find user
+        $user = User::where('user_id', $userId)->first();
+
+        if(!$user){
+            // create a new invite record
+            $user = User::create([
+                'user_id' => $userId,
+                'user_name' => $request->header('username', null)
+            ]);
+        }
+
+        // Check Package Name
+        $packageName = $request->get('package_name', Link::ANDROID_PACKAGE_NAME);
+
+        // Get link by user id and package name
+        $link = Link::where('user_id', $user->user_id)->where('package_name', $packageName)->first();
+
+        if(!$link){
+            $referrerData = [
+                //'code' => $user->referral_code,
+                'utm_source' => $user->referral_code,
+                'utm_medium' => Link::MEDIUM,
+                'utm_campaign' => Link::CAMPAIGN,
+                'utm_content' => $packageName
+            ];
+
+            // Create dynamic link from google firebase service
+            $websiteUrl = 'https://sumra.net/discover?referrer=' . $user->referral_code;
+            $googlePlayUrl = 'https://play.google.com/store/apps/details?id=' . $packageName . '&referrer=' . urlencode(http_build_query($referrerData));
+
+            $parameters = [
+                'dynamicLinkInfo' => [
+                    'domainUriPrefix' => config('dynamic_links.default_domain'),
+                    'link' => $websiteUrl,
+                    'socialMetaTagInfo' => [
+                        'socialTitle' => 'Sumra Net',
+                        'socialDescription' => 'Follow me on Sumra network',
+                        'socialImageLink' => 'https://sumra.net/css/logo.svg'
+                    ],
+                    'navigationInfo' => [
+                        'enableForcedRedirect' => true,
+                    ],
+                    'analyticsInfo' => [
+                        'googlePlayAnalytics' => [
+                            'utmSource' => $user->referral_code,
+                            'utmMedium' => Link::MEDIUM,
+                            'utmCampaign' => Link::CAMPAIGN,
+                            'utmContent' => $packageName,
+                            /*
+                            'utmTerm' => 'utmTerm',
+                            'gclid' => 'gclid'
+                            */
+                        ],
+                        /*
+                          'itunesConnectAnalytics' => [
+                            'at' => 'affiliateToken',
+                            'ct' => 'campaignToken',
+                            'mt' => '8',
+                            'pt' => 'providerToken'
+                          ]
+                        */
+                    ],
+                    'androidInfo' => [
+                        'androidPackageName' => $packageName,
+                        'androidFallbackLink' => $googlePlayUrl,
+                        //'androidMinPackageVersionCode' => Link::DEFAULT_ANDROID_MIN_PACKAGE_VERSION
+                    ],
+                    /*
+                    'iosInfo' => [
+                      'iosBundleId' => 'net.sumra.ios',
+                      'iosFallbackLink' => 'https://fallback.domain.tld',
+                      'iosCustomScheme' => 'customScheme',
+                      'iosIpadFallbackLink' => 'https://ipad-fallback.domain.tld',
+                      'iosIpadBundleId' => 'iPadBundleId',
+                      'iosAppStoreId' => 'appStoreId'
+                    ],
+                    */
+                ],
+                'suffix' => [
+                    'option' => 'SHORT'
+                ]
+            ];
+
+            $dynamicLinks = app('firebase.dynamic_links');
+
+            try {
+                $shortLink = $dynamicLinks->createDynamicLink($parameters);
+            } catch (FailedToCreateDynamicLink $e) {
+                return response()->jsonApi($e->getMessage());
+            }
+
+            // Add
+            $link = Link::create([
+                'user_id' => $user->user_id,
+                'package_name' => $packageName,
+                'referral_link' => (string) $shortLink
+            ]);
+        }
+
+        // Return dynamic link
+        return response()->jsonApi([
+            'referral_code' => $user->referral_code,
+            'referral_link' => $link->referral_link
+        ], 200);
+    }
+
+    /**
      * Save stats of downloads and first run application after install
      *
      * @param array $input
      * @return mixed
      */
     private function stats(Array $input){
-        //dd($input);
-
-        $info = Stats::create([
+        $info = Application::create([
             'referrer_code' => $input['referrer_code'] ?? null,
             'package_name' => $input['package_name'],
             'device_id' => $input['device_id'],
@@ -240,35 +410,24 @@ class MainController extends Controller
      */
     private function join(Array $input){
         // Find app user object and create if not exist
-        $user = User::where('app_user_id', $input['app_user_id'])->first();
+        $user = User::where('user_id', $input['user_id'])->first();
         if(!$user){
             $user = User::create([
-                'app_user_id' => $input['app_user_id'],
+                'user_id' => $input['user_id'],
                 'user_name' => $input['user_name']
             ]);
 
             // Check downloaded app
-            $app = Stats::where('device_id', $input['device_id'])->where('is_registered', false)->first();
-            if($app){
-                $app->is_registered = true;
-                $app->save();
+//            $app = Application::where('device_id', $input['device_id'])->where('is_registered', false)->first();
+//            if($app){
+//                $app->is_registered = true;
+//                $app->save();
+//            }
 
-                /**
-                 * Add Bonus for downloading the application and registration
-                 */
-                $array = [
-                    'new_user_id' => $input['app_user_id'],
-                    'points' => User::INSTALL_POINTS,
-                    'subject' => "Bonus for downloading the application {$input['package_name']} and registration"
-                ];
-                PubSub::transaction(function() use ($input, $user) {
-                    // Add device to user
-                    $device = Device::create([
-                        'name' => $input['device_name'],
-                        'device_id' => $input['device_id'],
-                        'user_id' => $user->id
-                    ]);
-                })->publish('sendRewardForInstallEmail', $array, 'mailReferral');
+            $app = Application::where('device_id', $input['device_id'])->first();
+            if($app){
+                $app->installed_status = Application::INSTALLED_OK;
+                $app->save();
             }
         }
 
@@ -276,7 +435,7 @@ class MainController extends Controller
         $referrerCode = $input['referrer_code'] ?? null;
         if($referrerCode !== null){
             // Check if new user has referrer already
-            $newUser = User::where('app_user_id', $input['app_user_id'])->where('referrer_id', '!=', 0)->first();
+            $newUser = User::where('user_id', $input['user_id'])->where('referrer_id', '!=', 0)->first();
 
             if($newUser){
                 abort(400, 'You already have an referrer');
@@ -293,14 +452,14 @@ class MainController extends Controller
              * Linking users and accruing referral bonus
              */
             $array = [
-                'id' => $referrer->app_user_id,
+                'id' => $referrer->user_id,
                 'points' => User::REFERRER_POINTS,
                 'event' => 'referral_bonus',
                 'note' => 'Accrual of referral bonus for the user ***'
             ];
             PubSub::transaction(function() use ($referrer, $user) {
                 // Add referrer to new user
-                $user->referrer_id = $referrer->app_user_id;
+                $user->referrer_id = $referrer->user_id;
                 $user->save();
             })->publish('ReferralBonus', $array, 'walletIP');
         }
@@ -316,7 +475,7 @@ class MainController extends Controller
  */
 /*
 $array = [
-    'new_user_id' => $appUserId,
+    'sumra_user_id' => $appUserId,
     'status' => $items = Arr::random([
         User::STATUS_APPROVED,
         User::STATUS_NOT_APPROVED,
